--- a/intimate-apt/build.gradle
+++ b/intimate-apt/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup:javapoet:1.7.0'
+    compile 'com.google.auto.service:auto-service:1.0-rc2'
 }
 
 sourceCompatibility = "1.7"
