--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'intimate-plugin'
 
 android {
     compileSdkVersion 25
@@ -25,6 +26,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.google.code.gson:gson:2.8.2'
     compile project(path: ':intimate-apt')
     annotationProcessor project(path: ':intimate-apt')
     compile project(path: ':intimate')
