--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
     
     repositories {
+        maven {
+            url uri('./repo')
+        }
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
-
+        classpath 'me.ele.plugin:intimate-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
