--- a/intimate-plugin/build.gradle
+++ b/intimate-plugin/build.gradle
@@ -1,8 +1,23 @@
-apply plugin: 'java-library'
+apply plugin: 'groovy'
+apply plugin: 'maven'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile gradleApi()
+    compile localGroovy()
+    compile 'com.android.tools.build:gradle:2.3.2'
+    compile 'org.javassist:javassist:3.20.0-GA'
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+repositories {
+    mavenCentral()
+}
+group='me.ele.plugin'
+version='1.0.0'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: uri('../repo'))
+        }
+    }
+}
