--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':intimate', ':intimate-compiler', ':intimate-annotation', ':intimate-plugin'
+include ':app', ':intimate', ':intimate-compiler', ':intimate-annotation', ':intimate-plugin', ':test-lib'
